<resources>
    <string name="app_name">QQueue</string>
    <string name="btn_view_queue">View Queue</string>
    <string name="btn_use_queue">Use</string>
    <string name="btn_edit_queue">Edit</string>
    <string name="activity_your_library">Your Library</string>
    <string name="activity_browse">Browse</string>
    <string name="activity_current_queue">Current Queue</string>
    <string name="ok">OK</string>
    <string name="yourQueueHeader">Your Queue</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="addtoplaylist">Add To Your Queue</string>

    <string name="settings">Settings</string>
    <string name="settings_nsfw">NSFW</string>
    <string name="settings_serious">Serious</string>
    <string name="settings_notif">Notifications</string>
    <string name="editQuestion">Edit Question:</string>

    <array name="nav_drawer_items">
        <item>Search</item>>
        <item>Current Queue</item>>
        <item>Browse</item>>
        <item>Your Library</item>>
    </array>

    <array name="nav_drawer_icons">
        <item>@drawable/ic_search_black_24dp</item>>
        <item>@drawable/ic_view_carousel_black_24dp</item>>
        <item>@drawable/ic_public_black_24dp</item>>
        <item>@drawable/ic_library_books_black_24dp</item>>
    </array>

</resources>
