<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settingsDialog"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:id="@+id/bar1"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:id="@+id/yourQueueHeader"
            android:textColor="@color/cardview_light_background"
            android:textAlignment="center"
            android:layout_centerInParent="true"
            android:textSize="@dimen/title_text"/>
    </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:weightSum="3"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:paddingLeft="120dp"
            android:paddingRight="120dp">

                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_nsfw"
                    android:textSize="30sp"
                    android:id="@+id/switch_nsfw"
                    android:layout_weight="1"/>

                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/settings_serious"
                    android:textSize="30sp"
                    android:id="@+id/switch_serious"
                    android:layout_weight="1"/>

                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_notif"
                    android:textSize="30sp"
                    android:id="@+id/switch_notifications"
                    android:layout_weight="1"/>

        </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/bar2"
        android:background="@color/colorPrimary">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:id="@+id/btn_settings_ok"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

</LinearLayout>
